:sparkles: spelling fix in title

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
             <li>
                 <h1 class="h1-responsive">BearHugs Fan Page</h1></li>
             <li>
-                <p>The Greatest Dog In THe World</p>
+                <p>The Greatest Dog In The World</p>
             </li>
             <li>
                 <!--Facebook-->
