:sparkles: card image bug when on mobile fix

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -73,9 +73,9 @@
                 <div class="card hoverable">
                     <!--Card image-->
                     <div class="view overlay hm-white-slight">
-                        <img src="assets/bear1.jpg" class="img-fluid" alt="">
+                        <img src="assets/bear5.jpg" class="img-fluid" alt="">
                         <a>
-                            <div class="mask"></div>
+                            <div class="mask waves-effect waves-light"></div>
                         </a>
                     </div>
                     <!--/.Card image-->
@@ -100,7 +100,7 @@
                     <div class="view overlay hm-white-slight">
                         <img src="assets/bear2.jpg" class="img-fluid" alt="">
                         <a>
-                            <div class="mask"></div>
+                            <div class="mask waves-effect waves-light"></div>
                         </a>
                     </div>
                     <!--/.Card image-->
@@ -125,7 +125,7 @@
                     <div class="view overlay hm-white-slight">
                         <img src="assets/bear3.jpg" class="img-fluid" alt="" style="size: '200px 200px'">
                         <a>
-                            <div class="mask"></div>
+                            <div class="mask waves-effect waves-light"></div>
                         </a>
                     </div>
                     <!--/.Card image-->
