--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang='en'>
-  <head>
 
+  <head>
+    <script src="http://maps.google.com/maps/api/js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -15,4 +16,5 @@
   <body>
     <%= yield %>
   </body>
+  
 </html>
