:art: google maps api debugging doesnt appear on heroku

--- a/app/views/partials/_cards.html.erb
+++ b/app/views/partials/_cards.html.erb
@@ -83,7 +83,7 @@
             <div class="card hoverable">
                 <!--Card image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="assets/bear3.jpg" class="img-fluid" alt="" style="size: '200px 200px'">
+                    <img src="assets/bear3.jpg" class="img-fluid" alt="">
                     <a>
                         <div class="mask waves-effect waves-light"></div>
                     </a>
