--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
 
   <head>
     <script src="http://maps.google.com/maps/api/js"></script>
+     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXBtnq70YhsFGCOlpxwTSVrYJquJ2JrxY&callback=initMap"
+  type="text/javascript"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
