--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 
   <head>
     <script src="http://maps.google.com/maps/api/js"></script>
-     <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%GOOGLE_MAPS_CLIENT_ID%>&callback=initMap"
+     <script async defer src="https://maps.googleapis.com/maps/api/js?key=ENV[MAPS_KEY]&callback=initMap"
   type="text/javascript"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
