--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -11,7 +11,7 @@
     <a class="btn-floating btn-small btn-li"><i class="fa fa-linkedin"> </i></a>
     <a class="btn-floating btn-small btn-git"><i class="fa fa-github"> </i></a>
     <a class="btn-floating btn-small btn-pin"><i class="fa fa-pinterest"> </i></a>
-    <a class="btn-floating btn-small btn-ins"><i class="fa fa-instagram"> </i></a>
+    <a href='https://www.instagram.com/bear_withus/' type="button" class="btn-floating btn-large btn-ins"><i class="fa fa-instagram"></i></a>
 </div>
 <!--/.Social buttons-->
 
