--- a/app/views/partials/_intro.html.erb
+++ b/app/views/partials/_intro.html.erb
@@ -2,9 +2,9 @@
 <div class="full-bg-img flex-center">
     <ul class='list'>
         <li>
-            <h1 class="h1-responsive">BearHugs Fan Page</h1></li>
+            <h1 class="h1-responsive deep-purple-text">BearHugs Fan Page</h1></li>
         <li>
-            <p>The Greatest Dog In The World</p>
+            <p class="deep-purple-text">The Greatest Dog In The World</p>
         </li>
     </ul>
 </div>
