--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-dark navbar-fixed-top">
     <ol class="breadcrumb elegant-color">
-        <li class="breadcrumb-item"><a href="" class='deep-purple-text'>Home</a></li>
-        <li class="breadcrumb-item"><a href="#author" class='deep-purple-text'>Author</a></li>
+        <li class="breadcrumb-item"><a href="" class='deep-purple-text' style="font-size: 25px;">Home</a></li>
     </ol>
 </nav>
