--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -6,11 +6,9 @@
 <!--Social buttons-->
 <div class="social-section">
     <a class="btn-floating btn-small btn-fb"><i class="fa fa-facebook"> </i></a>
-    <a class="btn-floating btn-small btn-tw"><i class="fa fa-twitter"> </i></a>
     <a class="btn-floating btn-small btn-gplus"><i class="fa fa-google-plus"> </i></a>
-    <a class="btn-floating btn-small btn-li"><i class="fa fa-linkedin"> </i></a>
-    <a class="btn-floating btn-small btn-git"><i class="fa fa-github"> </i></a>
-    <a class="btn-floating btn-small btn-pin"><i class="fa fa-pinterest"> </i></a>
+    <a href='https://www.linkedin.com/in/collin-shelby' class="btn-floating btn-small btn-li"><i class="fa fa-linkedin"> </i></a>
+    <a href='https://github.com/collinL34/BearHugs' class="btn-floating btn-small btn-git"><i class="fa fa-github"> </i></a>
     <a href='https://www.instagram.com/bear_withus/' type="button" class="btn-floating btn-large btn-ins"><i class="fa fa-instagram"></i></a>
 </div>
 <!--/.Social buttons-->
