--- a/app/views/partials/_cards.html.erb
+++ b/app/views/partials/_cards.html.erb
@@ -77,13 +77,13 @@
             <!--/.Card-->
         </div>
         <!--Third columnn-->
-        <!--Fourth columnn-->
+       <!--Third columnn-->
         <div class="col-md-3">
             <!--Card-->
             <div class="card hoverable">
                 <!--Card image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="assets/bear3.jpg" class="img-fluid" alt="">
+                    <img src="https://instagram.fsnc1-2.fna.fbcdn.net/t51.2885-15/e35/12907325_917224598395482_2008180420_n.jpg?ig_cache_key=MTIxODQyOTE1NTEyMzA0NDk3Ng%3D%3D.2" class="img-fluid" alt="">
                     <a>
                         <div class="mask"></div>
                     </a>
@@ -101,6 +101,6 @@
             </div>
             <!--/.Card-->
         </div>
-        <!--Fourth columnn-->
+        <!--Third columnn-->
     </div>
 </section>
