:sparkles: real text add to rest of cards

--- a/app/views/partials/_about.html.erb
+++ b/app/views/partials/_about.html.erb
@@ -3,6 +3,6 @@
 </div>
 <!--Section: About-->
 <section id="about" class="text-xs-center">
-    <p>Hello my name is Bear and I' am the most lucky dog in the world I live in Pleasanton with my amazing family. Its a big family but I love it. I have three sisters, Haley, Hannah and my favorite Heather, along with my three brothers, Logan, Jacob and Nathan.</p>
+    <p>Hello my name is Bear and I am the most lucky dog in the world I live in Pleasanton with my amazing family. Its a big family but I love it. I have three sisters, Haley, Hannah and my favorite Heather, along with my three brothers, Logan, Jacob and Nathan.</p>
     <p>And of course my lovely parents. I love them sooooo much they give me lots of chicken to eat.</p>
 </section>
