--- a/app/views/partials/_cards.html.erb
+++ b/app/views/partials/_cards.html.erb
@@ -20,7 +20,7 @@
                     <h4 class="card-title purple-text">Feed ME!</h4>
                     <hr>
                     <!--Text-->
-                    <p class="card-text purple-text">Omg here I am trying so hard to get my lovely sister to give me some food and she just keeps mouthing words that I don't understand. Sis! I don't speak human!</p>
+                    <p class="card-text purple-text">Omg here I am trying so hard to get my lovely sister to give me some food, and she just keeps mouthing words that I don't understand. Sis! I don't speak human!</p>
                 </div>
                 <!--/.Card content-->
             </div>
@@ -45,7 +45,7 @@
                     <h4 class="card-title purple-text">Young Sexy Me!</h4>
                     <hr>
                     <!--Text-->
-                    <p class="card-text purple-text">UUUUGh! I told them to not keep this pic. I look so scrawny I was on this dumb little puppy diet and it id not work. But my sis Heather!! had to take the pic thanks sis.</p>
+                    <p class="card-text purple-text">UUUUGh! I told them to not keep this pic. I look so scrawny. I was on this dumb little puppy diet and it did not work. But my sis Heather!! had to take the pic. Thanks sis.-__- </p>
                 </div>
                 <!--/.Card content-->
             </div>
@@ -70,7 +70,7 @@
                     <h4 class="card-title purple-text">Hugs</h4>
                     <hr>
                     <!--Text-->
-                    <p class="card-text purple-text">Oh I remember this pic. I hit my paw jumping up in the car and it hurt soooo bad. But luckily my sis gave me a hug and it was soo nice. I wish she wore deodorant though.</p>
+                    <p class="card-text purple-text">Oh, I remember this pic. I hit my paw jumping up in the car, and it hurt soooo bad. But luckily my sis gave me a hug, and it was soooo nice. I wish she wore deodorant though . . .</p>
                 </div>
                 <!--/.Card content-->
             </div>
@@ -95,7 +95,7 @@
                     <h4 class="card-title purple-text">Squirrel Dogs</h4>
                     <hr>
                     <!--Text-->
-                    <p class="card-text purple-text">Okay I get it sis . . . But I mean you walked around the house doesn't that mean you can walk me to the doggy park so I can make fun of the small dogs that look like squirrels.</p>
+                    <p class="card-text purple-text">Okay I get it sis . . . But I mean you walked around the house, doesn't that mean you can walk me to the doggy park so I can make fun of all the small dogs that look like squirrels.</p>
                 </div>
                 <!--/.Card content-->
             </div>
