--- a/app/views/partials/_contact.html.erb
+++ b/app/views/partials/_contact.html.erb
@@ -18,7 +18,7 @@
                     <p>Pleasanton Ca, 94588</p>
                 </li>
                 <li class="wow fadeInUp" data-wow-delay="0.4s"><i class="fa fa-envelope"></i>
-                    <p>contact@mdbootstrap.com</p>
+                    <p>bearDHugs@gmail.com</p>
                 </li>
             </ul>
         </div>
