--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -2,14 +2,13 @@
 <footer class="page-footer elegant-color center-on-small-only">
 
 <hr>
-
 <!--Social buttons-->
 <div class="social-section">
-    <a class="btn-floating btn-small btn-fb"><i class="fa fa-facebook"> </i></a>
-    <a class="btn-floating btn-small btn-gplus"><i class="fa fa-google-plus"> </i></a>
+    <a href='https://www.facebook.com/collin.shelby' class="btn-floating btn-small btn-fb"><i class="fa fa-facebook"> </i></a>
     <a href='https://www.linkedin.com/in/collin-shelby' class="btn-floating btn-small btn-li"><i class="fa fa-linkedin"> </i></a>
     <a href='https://github.com/collinL34/BearHugs' class="btn-floating btn-small btn-git"><i class="fa fa-github"> </i></a>
     <a href='https://www.instagram.com/bear_withus/' type="button" class="btn-floating btn-large btn-ins"><i class="fa fa-instagram"></i></a>
+    <hr>
 </div>
 <!--/.Social buttons-->
 
